# FuzzyPC

./: CMakeLists.txt  LICENSE  README.md
run/: ApplyLsh.h  CMakeLists.txt  Experiment1.cpp  Experiment2.cpp  Receiver.cpp  Sender.cpp
script/: buildThirdParty.sh
src/: Defines.h  FuzzyPc.h  FuzzyPcReceiver.h  FuzzyPcSender.h
src/Algorithms/: AngularLsh.h  BenesNetwork.h  CosineLsh.cpp  CosineLsh.h  JaccardLsh.cpp  JaccardLsh.h  Okvs.h
src/Algorithms/Rr22Okvs/VolePsi/: Defines.h  Paxos.h
src/Common/: Parser.h  Utils.cpp  Utils.h
src/DataStructures/: IntegerPermutation.cpp  IntegerPermutation.h  SparseVector.cpp
src/Protocols/: CMakeLists.txt  CpsiReceiver.cpp  CpsiReceiver.h  CpsiSender.cpp  CpsiSender.h  EqualityCheck.cpp  EqualityCheck.h  FuzzyPc.cpp  FuzzyPcReceiver.cpp  FuzzyPcSender.cpp  OpprfReceiver.cpp  OpprfReceiver.h  OpprfSender.cpp  OpprfSender.h  OprfReceiver.cpp  OprfReceiver.h  OprfSender.cpp  OprfSender.h  PnsReceiver.cpp  PnsReceiver.h  PnsSender.cpp  PnsSender.h  SecretSharedOt.cpp  SecretSharedOt.h
src/Protocols/Algorithms/: AngularLsh.cpp  BenesNetwork.cpp  CountVectorize.cpp  CountVectorizer.h
src/Protocols/Algorithms/Rr22Okvs/: Rr22Okvs.cpp  Rr22Okvs.h
src/Protocols/Algorithms/Rr22Okvs/VolePsi/: PaxosImpl.h  PxUtil.h  SimpleIndex.cpp  SimpleIndex.h  libdivide.h
src/Protocols/Common/: Parser.cpp  Random.h  RapidCsv.h  Utils.cpp  Utils.h
src/Protocols/DataStructures/: SparseVector.h
test/: CMakeLists.txt  gtest_BenesNetwork.cpp  gtest_Cpsi.cpp  gtest_EqualityCheck.cpp  gtest_Okvs.cpp  gtest_Pns.cpp  gtest_SecretSharedOt.cpp
